refactor: simplified examples to redis and weaviate, added similarity search to API, more refactoring
